Using singletonMap instead of Map.of()
Signed-off-by: ShubhamRwt <srawat@redhat.com>